--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -8,27 +8,33 @@
   <form action="" method="get" class="form-example">
     <div class="form-example">
       <label for="email">Email</label>
-      <div><input type="email" name="email" /></div>
+      <div><input type="email" name="email" id="email" /></div>
       <label for="cool">Why is coding cool?</label>
-    <div><select name="options">
+    <div><select name="options" id="cool">
       <option value="option">Select an option</option>
       <option value="interesting">Because it's interesting</option>
       <option value="fun">Because it's fun</option>
       <option value="powerful">Because it's powerful</option>
     </select></div>
-      <label for="choose">Favorite Language (choose one)</label>
+      <div>Favorite Language (choose one)</div>
     <div><radio>
+      <label>
       <input type="radio" name="language" value="html" checked="checked" /> HTML
+      </label>
+      <label>
       <input type="radio" name="language" value="css" /> CSS
+      </label>
+      <label>
       <input type="radio" name="language" value="javascript" /> JavaScript
+      </label>
     </radio></div>
     <label for="signup">Would you like to sign up for more information?</label>
-    <div><checkbox>
-      <input type="checkbox" name="more" value="signup" /> Sign Me Up!
-    </checkbox></div>
+    <div>
+      <input type="checkbox" name="signup" id="signup" /> Sign Me Up!
+    </div>
     <label for="comments">Comments</label>
       <div>
-       <textarea name="comments" cols="40" rows="4"></textarea>
+       <textarea type="comments" name="comments" id="comments" cols="40" rows="4"></textarea>
       </div>
       <div>
        <input type="submit" name="submit" value="Submit" />
