made requested changes on html-web-page.

--- a/html-web-page/index.html
+++ b/html-web-page/index.html
@@ -69,8 +69,8 @@
     </tbody>
   </table>
   <p>Like what you see? Become a part of the JOTMC family today!</p>
-  <label for="name"></label>
-  <input type="text" id="name" name="name" value="Your Name">
+  <form>
+  <input type="text" id="name" name="name" placeholder="Your Name">
   <select name="plan" id="plan-select">
     <option value="">Select your plan:</option>
     <option value="basic">Basic Plan</option>
@@ -78,5 +78,6 @@
     <option value="giant">Jelly Giant Plan</option>
    </select>
   <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
