--- a/css-brochure-form/index.html
+++ b/css-brochure-form/index.html
@@ -9,41 +9,47 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <div class="form">
-    <div>
-      <h2>LEARN MORE</h2>
-    </div>
-
+  <h2>LEARN MORE</h2>
+  <div class="format">
     <form>
-    <div>
-      <label for="email">COMPANY EMAIL</label>
-      <div><input type="text" name="email" id="email" placeholder="sally@company.co"></div>
-    </div>
-
-    <div>
-      <label for="name">NAME</label>
-      <div><input type="text" name="name" id="name" placeholder="Sally Smith"></div>
-    </div>
-
-    <div>
-      <label for="location">WHERE ARE YOU HIRING?</label>
-      <div><input type="text" name="location" id="location" placeholder="City, Country"></div>
+      <div>
+        <div>
+          <label for="email">COMPANY EMAIL</label>
+        </div>
+        <div>
+          <input type="text" name="email" id="email" placeholder="sally@company.co">
+        </div>
       </div>
-
-     <div>
-      <label for="head-count">HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</label>
-      <div><select name="count" id="head-count">
+      <div>
+        <div>
+          <label for="name">NAME</label>
+        </div>
+        <div>
+          <input type="text" name="name" id="name" placeholder="Sally Smith">
+        </div>
+      </div>
+      <div>
+        <div>
+          <label for="location">WHERE ARE YOU HIRING?</label>
+        </div>
+        <div>
+          <input type="text" name="location" id="location" class="input" placeholder="City, Country">
+        </div>
+      </div>
+      <div>
+        <label for="head-count">HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</label>
+      </div>
+      <select name="count" id="head-count">
         <option value="1-2">1-2 Engineers</option>
         <option value="3-4">3-4 Engineers</option>
         <option value="5-6">5-6 Engineers</option>
         <option value="7-8">7-8 Engineers</option>
-      </select></div>
+      </select>
+      <div class="button">
+        <button class="submit">SUBMIT</button>
       </div>
-
-      <button name="submit">Submit</button>
-  </form>
+    </form>
   </div>
 </body>
 </html>
