Fixed row to hold three column elements with image, heading and paragraph.

--- a/css-three-column-layout/index.html
+++ b/css-three-column-layout/index.html
@@ -19,31 +19,28 @@
         <div class="circleImg">
           <img src="images/merge.png" alt="merge-icon">
         </div>
+        <h3>Streamlined QMS</h3>
+        <p>A QMS that includes modules for all stages of the product life cycle
+          from Design Control to CAPA</p>
       </div>
+      <!-- </div> -->
       <div class="column-one-third">
         <div class="circleImg">
           <img src="images/cloud-computing.png" alt="cloud-computing-icon">
         </div>
-      </div>
-     <div class="column-one-third">
-      <div class="circleImg">
-          <img src="images/discussion.png" alt="discussion-icon">
-      </div>
-     </div>
-    </div>
-        <div class="row">
-          <h3>Streamlined QMS</h3>
-          <h3>Integrates with existing tools</h3>
-          <h3>In-depth Onboarding</h3>
-        </div>
-        <div class="row">
-          <p>A QMS that includes modules for all stages of the product life cycle
-          from Design Control to CAPA</p>
-          <p>Enzyme QMS integrates with your existing tools, such as JIRA,
+        <h3>Integrates with existing tools</h3>
+        <p>Enzyme QMS integrates with your existing tools, such as JIRA,
           GitHub and Jenkins with Enzyme</p>
-          <p>We train your entire team and provide you with support when and
+      </div>
+      <div class="column-one-third">
+        <div class="circleImg">
+          <img src="images/discussion.png" alt="discussion-icon">
+        </div>
+        <h3>In-depth Onboarding</h3>
+        <p>We train your entire team and provide you with support when and
           as it's needed</p>
         </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
