css-canvas-medical in progress.

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="row">
+    <div class="row" id="header-row">
       <div class="column-half">
         <div class="canvas-logo">
           <img src="images/logo-blue.svg" alt="canvas-logo">
@@ -24,7 +24,7 @@
             <li>Implementation</li>
             <li>About Us</li>
             <li>Blog</li>
-            <li><button>Contact Us</button></li>
+            <li class="top-button"><button>Contact Us</button></li>
           </ul>
         </nav>
       </div>
