Completed css-canvas-medical challenge.

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -14,17 +14,17 @@
     <div class="row" id="header-row">
       <div class="column-half">
         <div class="canvas-logo">
-          <img src="images/logo-blue.svg" alt="canvas-logo">
+          <img src="images/logo-blue.svg">
         </div>
       </div>
       <div class="column-half">
         <nav class="canvas-nav">
           <ul>
-            <li>Products</li>
-            <li>Implementation</li>
-            <li>About Us</li>
-            <li>Blog</li>
-            <li class="top-button"><button>Contact Us</button></li>
+            <li class="nav"><a href="">Product</a></li>
+            <li class="nav"><a href="">Implementation</a></li>
+            <li class="nav"><a href="">About Us</a></li>
+            <li class="nav"><a href="">Blog</a></li>
+            <li class="nav"><button><a href="">Contact Us</a></button></li>
           </ul>
         </nav>
       </div>
@@ -34,16 +34,14 @@
         <div class="hero-image">
           <div class="column-half">
             <div class="hero-text">
-              <h2>The EMR Reimaginied for Primary Care</h2>
-              <p>Can't remember the last time you talked with a patient without
-                focusing on the EMR? Canvas lets you rediscover joy in the work
-                you do. Capture meaningful data, identify gaps in care, and move
-                seamlessly between tasks within the platform. You stay present
-                with patients while your whole care team stays up-to-speed. Be a
-                better doctor with Canvas, deisigned for primary care providers
-                with the help of primary care providers.
+              <h2>The EMR Reimagined for Primary Care</h2>
+              <p>Can't remember the last time you talked with a patient without focusing
+                on the EMR? Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify
+                gaps in care, and move seamlessly between tasks with the platform. You stay present with patients
+                while your whole care team stays up-to-speed. Be a better doctor with Canvas, designed for primary
+                care providers with the help of primary care providers.
               </p>
-              <button>Get Started</button>
+              <button><a href="">Get Started</a></button>
             </div>
           </div>
         </div>
@@ -53,18 +51,17 @@
       <div class="row">
         <div class="column-full">
           <h3 class="body-header">Clinicians Prefer Canvas</h3>
-          <p class="body-paragraph">Physician-owned primary care practices across the country have
-            already made Canvas the fabric of their care.
-          </p>
+          <p class="body-paragraph">Physician-owned primary care practices across the country have already made Canvas the fabric
+            of their care.</p>
         </div>
       </div>
-      <div class="row-center">
-        <div class="column-half-center">
+      <div class="row align-text-center">
+        <div class="column-half align-text-center">
           <h6>Cascade Family Practice, Portland OR</h6>
           <h6>Temescal Creek Medicine, Oakland CA</h6>
           <h6>San Juan Healthcare, Friday Harbor WA</h6>
         </div>
-        <div class="column-half-center">
+        <div class="column-half align-text-center">
           <h6>Ward Medical Clinic, Bonifay FL</h6>
           <h6>Caribou Medical, Towanda PA</h6>
           <h6>Bay Tree Family Care, Red Bay AL</h6>
@@ -80,15 +77,15 @@
       </div>
       <div class="column-half">
         <div class="get-started-button">
-          <button>Get Started</button>
+          <button><a href="">Get Started</a></button>
         </div>
       </div>
     </div>
     <div class="container-info">
-      <div class="row-info">
+      <div class="row-footer">
         <div class="column-half">
           <div class="white-canvas-logo">
-            <img src="images/logo-white.png" alt="white-canvas-logo">
+            <img src="images/logo-white.png">
           </div>
           <p>2307 Irving Street, Suite 228</p>
           <p>San Francisco CA 94122</p>
@@ -98,17 +95,17 @@
         <div class="column-one-fourth">
           <ul>
             <li class="list-heading">COMPANY</li>
-            <li class="list-info">About Us</li>
-            <li class="list-info">Blog</li>
+            <li><a class="info-text" href="">About Us</a></li>
+            <li><a class="info-text" href="">Blog</a></li>
           </ul>
         </div>
         <div class="column-one-fourth">
           <ul>
             <li class="list-heading">PRODUCT</li>
-            <li class="list-info">Product</li>
-            <li class="list-info">Implementation</li>
-            <li class="list-info">For Health Plans</li>
-            <li class="list-info">Security</li>
+            <li><a class="info-text" href="">Product</a></li>
+            <li><a class="info-text" href="">Implementation</a></li>
+            <li><a class="info-text" href="">For Health Plans</a></li>
+            <li><a class="info-text" href="">Security</a></li>
           </ul>
         </div>
       </div>
@@ -117,8 +114,8 @@
       <div class="row">
         <div class="column-full">
           <ul>
-            <li class="nav-footer">Privacy &amp; Terms</li>
-            <li class="nav-footer">Contact Us</li>
+            <li class="nav-footer"><a href="">Privacy &amp; Terms</a></li>
+            <li class="nav-footer"><a href="">Contact Us</a></li>
           </ul>
         </div>
       </div>
